small overflow fix

--- a/cart/cart.css
+++ b/cart/cart.css
@@ -30,7 +30,17 @@ h4 {
 }
 #couponcode {
    width:auto !important;
-   margin-left:15px;
+   
+   
+}
+#coupon_code {
+    
+    width: 75%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
 }
 
 #expiry-cvc > #cvc {
@@ -114,4 +124,15 @@ input:focus {
 .cart-total {
     margin-top: 20px;
     font-weight: bold;
+}
+@media (max-width: 900px) {
+    .checkout-container {
+        flex-direction:column;
+    }
+    .sec-links {
+        flex-direction:column;
+        gap: 0;
+        
+        align-items:center;
+    }
 }
